<resources>
    <string name="app_name">MusicalStructure</string>
    <string name="devotional_songs">Devotional Songs</string>
    <string name="play">Play</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="popplay">Play</string>
    <string name="art_songs">Art Songs</string>
    <string name="artplay">Play</string>
    <string name="classical_songs">Classical Songs</string>
    <string name="classplay">Play</string>
    <string name="onav">O Navile</string>
    <string name="ninna">Ninna Dhanigagi</string>
    <string name="anjali">Anjali Anjali</string>
    <string name="mal">Maleyeli Ninda</string>
    <string name="usire">Usire Usire</string>
    <string name="omeg">O Meghave Meghave</string>
    <string name="spb1">S.P.B</string>
    <string name="spb2">S.P.B</string>
    <string name="vijay1">Vijay Prakash</string>
    <string name="shreya">Shreya Goshal</string>
    <string name="vijay2">Vijay Prakash</string>
    <string name="spb3">S.P.B</string>
    <string name="nada">Nadhamaya</string>
    <string name="olavina">Olavina Manege Ba</string>
    <string name="jaga">Jagadodharana</string>
    <string name="indhu">Indhu Yenage Govinda</string>
    <string name="haadhi">Hadinalku Varsha</string>
    <string name="sundari">Sundari sundari</string>
    <string name="raj1">Rajkumar</string>
    <string name="spb4">S.P.B</string>
    <string name="pbsrinivas">P.B.Srinivas</string>
    <string name="janaki">Janaki</string>
    <string name="vijanu">Vijay Prakash and Anuradha Bhat</string>
    <string name="maha">Mahaganapathi</string>
    <string name="devare">Devare Neenu Nijavappa</string>
    <string name="krishna">krishna nee begane</string>
    <string name="olord">O Lord Nanna Vadha</string>
    <string name="elli">Elli Ramano alli Hanumanu</string>
    <string name="venka">Venkatachala Nilayam</string>
    <string name="raje">Rajesh Krishnan</string>
    <string name="spb6">S.P.B</string>
    <string name="chitra">K S Chitra</string>
    <string name="raj2">Rajkumar</string>
    <string name="raj3">Rajkumar</string>
    <string name="vijay3">Vijay Prakash</string>
    <string name="dar">Darshan Hits</string>
    <string name="sud">Sudeep Hits</string>
    <string name="rajh">Raj Hits</string>
    <string name="yash">Yash Hits</string>
    <string name="malashree">Malashree Hits</string>
    <string name="vishnu">Vishnu Hits</string>
    <string name="heman">Hemanth</string>
    <string name="vijay">Vijay Prakash</string>
    <string name="raj">Rajkumar</string>
    <string name="chanda">Chandan Shetty</string>
    <string name="manj">Manjula Gururaj</string>
    <string name="spb">S.P.B</string>
</resources>
