<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<TextView
    android:background="@drawable/shiva"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/devotional_text_view"
    android:paddingTop="16dp"
    android:paddingLeft="46dp"
    android:paddingBottom="16dp"
    android:text="@string/devotional_songs"/>
        <Button
            android:id="@+id/dev_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#006064"
            android:text="@string/play"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Popular_text_view"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/popular"
        android:text="@string/popular_songs"/>
    <Button
        android:id="@+id/pop_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#006064"
        android:text="@string/popplay"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/art_text_view"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/art"
        android:paddingBottom="16dp"
        android:text="@string/art_songs"/>
    <Button
        android:id="@+id/art_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#006064"
        android:text="@string/artplay"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/classical"
        android:paddingBottom="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/classical_text_view"
        android:text="@string/classical_songs"/>
    <Button
        android:id="@+id/clas_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#006064"
        android:text="@string/classplay"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="#000000" />
</LinearLayout>
</ScrollView>